<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/discoveryFragment"
        android:icon="@drawable/ic_discover"
        android:title="@string/nav_discover" />
    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_history" />
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/nav_favorites" />
    <item
        android:id="@+id/identifyFragment"
        android:icon="@drawable/ic_camera"
        android:title="@string/nav_identify" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
